[package]
name = "portier"
version = "0.1.0"
edition = "2021"
authors = ["The Portier project contributors"]
description = "Portier client for Rust"
repository = "https://github.com/portier/portier-rs"
license = "MIT"
rust-version = "1.60.0"

[workspace]
members = [
  "example",
  "tester"
]

[features]
default = ["simple-store"]
simple-store = ["tokio", "hyper", "hyper-tls"]

[dependencies]
base64 = "0.21.0"
bytes = "1.0.1"
hyper = { version = "0.14.9", optional = true, features = ["http1", "http2", "client"] }
hyper-tls = { version = "0.5.0", optional = true }
ring = "0.16.15"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.25"
tokio = { version = "1.24.2", optional = true, features = ["rt", "sync"] }
url = { version = "2.2.2", features = ["serde"] }
